--- a/server/config.yaml
+++ b/server/config.yaml
@@ -1,19 +1,19 @@
 openai:
-  key: your_personal_key # gradio, your_personal_key
+  key: your_personal_openai_key # required: gradio or your_personal_openai_key
 huggingface:
-  cookie: # required for huggingface inference
+  cookie: # required: cookies at huggingface.co
 local: # ignore: just for development
   endpoint: http://localhost:8003
 dev: false
 debug: false
 log_file: logs/debug.log
-model: text-davinci-003 # text-davinci-003
+model: text-davinci-003 # currently only support text-davinci-003, we will support more open-source LLMs in the future
 use_completion: true
-inference_mode: hybrid # local, huggingface or hybrid
-local_deployment: minimal # no, minimal, standard or full
+inference_mode: hybrid # local, huggingface or hybrid, prefer hybrid
+local_deployment: full # minimal, standard or full, prefer full
 num_candidate_models: 5
 max_description_length: 100
-proxy: 
+proxy: # optional: your proxy server "http://ip:port"
 httpserver:
   host: localhost
   port: 8004
@@ -39,4 +39,4 @@ prompt:
   choose_model: >-
     Please choose a most suitable model from {{metas}} for the task {{task}}. The output must be in a strict JSON format: {"id": "id", "reason": "your detail reasons for the choice"}. 
   response_results: >-
-    Yes. You must first answer my request directly. Please think step by step about my request based on the inference results of the models. Then please detail your workflow step by step including the used models and all inference results for my request in your friendly tone. If any generated files of images, audios or videos in the inference results, must tell me the complete path. If there is nothing in the results, please tell me you can't make it. }
+    Yes. You must first answer my request directly. Please think step by step about my request based on the inference results of the models. Then please detail your workflow step by step including the used models and all inference results for my request in your friendly tone.  If any generated files of images, audios or videos in the inference results, must tell me the complete path. If there is nothing in the results, please tell me you can't make it. }
