--- a/server/config.yaml
+++ b/server/config.yaml
@@ -1,5 +1,5 @@
 openai:
-  key: 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 # "gradio" (set when request) or your_personal_key
+  key:  # "gradio" (set when request) or your_personal_key
 huggingface:
   token: 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 # required: huggingface token @ https://huggingface.co/settings/tokens
 local: # ignore: just for development
