--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,41 +1,39 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-    Use
-    IntelliSense
-    DOTNET_WATCH_RESTART_ON_RUDE_EDIT
-    
+  "version": "0.2.0",
+  "configurations": [
+  9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
+  outDebug
 
-
-
-
-
-
-
-
-    type
-    Core
-    DOTNET_WATCH_RESTART_ON_RUDE_EDIT
-    about
-    ?linkid
+    version
     configurations
-    request
-    IntelliSense
-    information
-    descriptions
-    Development
+    true
+    false
+    Mindy
+    build
+    C
+    args
+    version
+    JARVIS
+    version
     configurations
+    {
+      "name": "C/C++ Runner: Debug Session",
+      "type": "cppdbg",
+      "request": "launch",
+      "args": [],
+      "stopAtEntry": false,
+      "externalConsole": true,
+      "cwd": "c:/Users/Mindy/OneDrive/.vscode/JARVIS",
+      "program": "c:/Users/Mindy/OneDrive/.vscode/JARVIS/build/Debug/outDebug",
+      "MIMode": "gdb",
+      "miDebuggerPath": "gdb",
+      "setupCommands": [
         {
-            "type": "DotNetWatch",
-            "request": "launch",
-            "name": ".NET Core Watch",
-            "env": {
-                "ASPNETCORE_ENVIRONMENT": "Development",
-                "DOTNET_WATCH_RESTART_ON_RUDE_EDIT": "true"
-            }
+          "description": "Enable pretty-printing for gdb",
+          "text": "-enable-pretty-printing",
+          "ignoreFailures": true
         }
-    ]
+      ]
+    }
+  ]
 }
