--- a/server/config.yaml
+++ b/server/config.yaml
@@ -1,11 +1,16 @@
-openai:
-  key: your_personal_openai_key # "gradio" (set when request) or your_personal_key
+openai: 
+  api_key: REPLACE_WITH_YOUR_OPENAI_API_KEY_HERE
+# azure:
+#   api_key: REPLACE_WITH_YOUR_AZURE_API_KEY_HERE
+#   base_url: REPLACE_WITH_YOUR_ENDPOINT_HERE
+#   deployment_name: REPLACE_WITH_YOUR_DEPLOYMENT_NAME_HERE
+#   api_version: "2022-12-01"
 huggingface:
-  token: # required: huggingface token @ https://huggingface.co/settings/tokens
+  token: REPLACE_WITH_YOUR_HUGGINGFACE_TOKEN_HERE # required: huggingface token @ https://huggingface.co/settings/tokens
 dev: false
 debug: false
 log_file: logs/debug.log
-model: text-davinci-003 # currently only support text-davinci-003, we will support more open-source LLMs in the future
+model: text-davinci-003 # currently only support text-davinci-003, gpt-4, we will support more open-source LLMs in the future
 use_completion: true
 inference_mode: hybrid # local, huggingface or hybrid, prefer hybrid
 local_deployment: full # minimal, standard or full, prefer full
