--- a/server/lite.yaml
+++ b/server/lite.yaml
@@ -1,11 +1,11 @@
-openai:
-  key: your_personal_openai_key # "gradio" (set when request) or your_personal_openai_key
+openai: 
+  api_key: REPLACE_WITH_YOUR_OPENAI_API_KEY_HERE
 huggingface:
-  token: # required: huggingface token @ https://huggingface.co/settings/tokens
+  token: REPLACE_WITH_YOUR_HUGGINGFACE_TOKEN_HERE # required: huggingface token @ https://huggingface.co/settings/tokens
 dev: false
 debug: false
 log_file: logs/debug.log
-model: text-davinci-003 # currently only support text-davinci-003, we will support more open-source LLMs in the future
+model: text-davinci-003 # currently only support text-davinci-003, gpt-4, we will support more open-source LLMs in the future
 use_completion: true
 inference_mode: huggingface # local, huggingface or hybrid, prefer hybrid
 local_deployment: minimal # minimal, standard or full, prefer full
