--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,6 +1,33 @@
 {
   "version": "0.2.0",
   "configurations": [
+    
+    9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
+
+    attributes
+    autofetch
+    aiquickfix
+    json
+    amd64
+    ASPNETCORE_ENVIRONMENT
+    ASPNETCORE_ENVIRONMENT
+    9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
+    DOTNET_WATCH_RESTART_ON_RUDE_EDIT
+    9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
+
+    launch
+    Debug
+    C
+    launch
+    Session
+    autofetch
+    version
+    breadcrumbs
+    9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
+    configurations
+    9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
+    configurations
+    9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
     9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
     9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
     9yDfO4XT9GIEG6MlGGviT3BlbkFJgUscuenOlN8oaC5eRgDu
